namespace Draya.Application.Classrooms.DTOs;

public record SubjectDto(Guid Id, string Name);
